Added some styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>JavaScript Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="title">JavaScript Calculator</h1>
+    <h2 class="author">By Peter Drury</h2>
+  </body>
   <script src="./js/calculator.js"></script>
 </html>
